Temporarily put breaking changes back and add upgrade/feedback instructions to release notes